@@ -1,0 +1,1 @@
+select col1, col2 from sortfirstdesc order by col1 desc, col2;
