@@ -176,6 +176,9 @@ Release 0.10.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1283: ORDER BY with the first descending order causes wrong results.
+    (Keuntae Park)
+
     TAJO-1324: Remove warehouse directory rewriting in Unit Test. (jinho)
 
     TAJO-1321: Cli prints wrong response time. (jihoon)
